crates/biome_plugin_loader/src/snapshots/deserialization_error.snap
---
source: crates/biome_plugin_loader/src/diagnostics.rs
expression: content
---
# Plugin

## `biome-manifest.jsonc`

```jsonc
{
            "plugins": {
                "rules": [{ "one": "rules/1.grit" }],
                "presets": { "recommended": ["one"] }
            }
        }
```

# Input

No input was analyzed.

# Diagnostics

```block
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key `version` is missing.
  
  > 1 │ {
      │ ^
  > 2 │             "plugins": {
  > 3 │                 "rules": [{ "one": "rules/1.grit" }],
  > 4 │                 "presets": { "recommended": ["one"] }
  > 5 │             }
  > 6 │         }
      │         ^
```
