crates/biome_plugin_loader/src/snapshots/dispatches_nodes_to_the_matching_rules.snap
---
source: crates/biome_plugin_loader/src/analyzer_js_plugin.rs
expression: content
---
# Plugin

## `/plugin.js`

```js
import { ast, defineRule, registerDiagnostic } from "@biomejs/runtime/plugin";
export const noVar = defineRule({
	query: ast("JS_VARIABLE_STATEMENT"),
	run(statement) {
		if (statement.declaration?.kindToken === "var") {
			registerDiagnostic(statement, "warning", "Use let or const instead.");
		}
	},
});
export const noFoo = defineRule({
	query: ast("JS_VARIABLE_STATEMENT", "JS_CALL_EXPRESSION"),
	run(node) {
		registerDiagnostic(node, "information", `Seen: ${node.kind}`);
	},
});
```

# Input

## `/file.js`

```js
var legacy = foo();
```

# Diagnostics

```block
/file.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Seen: JS_VARIABLE_STATEMENT
  
  > 1 │ var legacy = foo();
      │ ^^^^^^^^^^^^^^^^^^^
  

/file.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Use let or const instead.
  
  > 1 │ var legacy = foo();
      │ ^^^^^^^^^^^^^^^^^^^
  

/file.js:1:14 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Seen: JS_CALL_EXPRESSION
  
  > 1 │ var legacy = foo();
      │              ^^^^^
```
