crates/biome_plugin_loader/src/snapshots/evaluate_in_worker_threads.snap
---
source: crates/biome_plugin_loader/src/analyzer_js_plugin.rs
expression: content
---
# Plugin

## `/plugin.js`

```js
import { ast, defineRule, registerDiagnostic } from "@biomejs/runtime/plugin";
export const useMyPlugin = defineRule({
	query: ast("JS_MODULE"),
	run(root) {
		registerDiagnostic(root, "information", "Hello, world!");
	},
});
```

# Input

## `/foo.js`

```js
let foo;
```

## `/bar.js`

```js
let bar;
```

# Diagnostics

```block
/foo.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Hello, world!
  
  > 1 │ let foo;
      │ ^^^^^^^^
  

/bar.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Hello, world!
  
  > 1 │ let bar;
      │ ^^^^^^^^
```
