crates/biome_plugin_loader/src/snapshots/load_js_plugin_without_runtime_support.snap
---
source: crates/biome_plugin_loader/src/lib.rs
expression: content
---
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unsupported rule format for plugin rule /my-plugin.js.
