crates/biome_plugin_loader/src/snapshots/load_plugin_with_wrong_rule_extension.snap
---
source: crates/biome_plugin_loader/src/lib.rs
expression: content
---
# Plugin

## `/my-plugin/biome-manifest.jsonc`

```jsonc
{
    "version": 1,
    "plugins": {
        "rules": [{ "one": "rules/1.txt" }],
        "presets": { "recommended": ["one"] }
    }
}
```

# Input

No input was analyzed.

# Diagnostics

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unsupported rule format for plugin rule rules/1.txt.
```
