crates/biome_plugin_loader/src/snapshots/load_plugin_with_wrong_version.snap
---
source: crates/biome_plugin_loader/src/lib.rs
expression: content
---
# Plugin

## `/my-plugin/biome-manifest.jsonc`

```jsonc
{
    "version": 2,
    "plugins": {
        "rules": [{ "one": "rules/1.grit" }],
        "presets": { "recommended": ["one"] }
    }
}
```

# Input

No input was analyzed.

# Diagnostics

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The Biome manifest /my-plugin/biome-manifest.jsonc is invalid.
    
    Caused by:
      Unsupported version 2.
```
