crates/biome_plugin_loader/src/snapshots/load_plugin_without_manifest.snap
---
source: crates/biome_plugin_loader/src/lib.rs
expression: content
---
# Plugin

## `/my-plugin/rules/1.grit`

```grit
`hello`
```

# Input

No input was analyzed.

# Diagnostics

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to resolve the Biome manifest from /my-plugin
```
